Fri Jan 16 15:35:21 2015  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: bump version

	* ext/psych/lib/psych/visitors/yaml_tree.rb: fix line width wrapping
	  for long strings.  Thanks Jakub Jirutka <jakub@jirutka.cz>

	* test/psych/test_string.rb: test for change

Fri Jan 16 11:44:44 2015  Kazuki Tsujimoto  <kazuki@callcc.net>

	* eval_intern.h, vm.c, vm_eval.c, vm_insnhelper.c:
	  change throw mechanism (not save target ep, but save target cfp).
	  It fixes `unexpected break' bug that occurs when
	  TracePoint#binding is called.
	  [ruby-dev:48797] [Bug #10689]

	* test/ruby/test_settracefunc.rb: add a test.

Thu Jan 15 23:55:15 2015  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_close_m): Don't raise when the IO object is closed.
	  [ruby-core:67444] [Feature #10718]

Thu Jan 15 21:34:57 2015  Seiei Higa  <hanachin@gmail.com>

	* proc.c (rb_obj_singleton_method): Kernel#singleton_method should
	  not use refinements, as well as Kernel#method.
	  [ruby-core:67603] [Bug #10744]

Thu Jan 15 10:45:04 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_select_bang, ary_reject_bang): linear
	  performance.  [ruby-core:67418] [Feature #10714]

Wed Jan 14 18:06:06 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* lib/uri/mailto.rb: raising URI::InvalidComponentError instead
	  of failing with undefined method `split' for nil:NilClass for
	  mailto: URIs without opaque part. [Bug #10738]
	* test/uri/testuri.rb: Test for above

Wed Jan 14 16:45:24 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/downloader.rb (RubyGems.download): verify downloaded gem
	  packages.  LowSecurity to allow untrusted certificates now.

Wed Jan 14 15:43:48 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/readline.c (readline_s_refresh_line): initialize
	  before rl_refresh_line(), as some function make the internal
	  state non-clean but rl_refresh_line() does not re-initialize it.
	  [ruby-core:43957] [Bug #6232]
